# godot-dash

./: .gitattributes  .gitignore  CONTRIBUTING.md  GDImporter.gd  README.md  export_presets.cfg  godot-rust-utils.gdextension  godot-rust-utils.gdextension.uid  project.godot  tabby_explorer_main_pref.tres
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/: splash.png.import
resources/: Checkpoint.tres  DefaultTextSettings.tres  FadeEnterEffect.tres  FadeEnterEffectCanvasGroup.tres  PulseWhiteMaterial.tres  SimpleBlurMaterial.tres  SpiderAnimations.tres  Theme.tres  TriggerDisplay.tres  UnroundedStyle.tres  default_bus_layout.tres
rust/: .gitignore  Cargo.toml  justfile
rust/src/: lib.rs  selection.rs
scenes/: EditorScene.tscn  GameScene.tscn  Level.gd  Level.gd.uid  TitleScreen.tscn
src/: BouncyButton.gd  ChildPositionLock.gd  ColorChannelWatcher.gd  EditorGrid.gd  EditorScene.gd  FadeScreen.gd  GameScene.gd  GroundObject.gd  HSVWatcher.gd  IconGamemodeProp.gd  IconGarage.gd  IconGarage.gd.uid  InstanciatedOneShotParticle.gd  InstanciatedOneShotParticle.gd.uid  Layer.gd  Layer.gd.uid  LayeredSprite.gd  LayeredSprite.gd.uid  Level.gd  LevelPanel.gd  LevelPanel.gd.uid  LevelPanelLoader.gd  LevelPanelLoader.gd.uid  LevelSelectorTab.gd  MapCamera2D.gd  MenuIcon.gd  MenuIcon.gd.uid  MenuIconKiller.gd  MenuIconKiller.gd.uid  MenuLoop.gd  MenuLoop.gd.uid  NinePatchSprite2DAbsoluteSize.gd  PauseMenu.gd  PercentageLayer.gd  PercentageLayer.gd.uid  PhantomCameraHistory.gd  Player.gd  PlayerCamera.gd  PositionFollow2D.gd  PreviewIcon.gd  (+24 more)
(+820 files in other folders)
